--- a/changelog
+++ b/changelog
@@ -15,3 +15,13 @@
 
 **Modificado**
 - App foro, se agrega una vista (foro.index) de ejemplo para probar el template.
+
+# Version 0.3 - 25-06-2018
+
+**Agregado**
+- Se agregó el branch “sys_login”.
+- Se agregó la aplicación “foro_login”.
+- Se agregó Template login/login.html.
+
+**Modificado**
+- Se modificó el archivo core/templates/core/base.html
